Add property to enable compiler preview features